<resources>
    <string name="app_name">Hayseed</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="register">Register</string>
    <string name="name">Nama</string>
    <string name="confirm_password">Konfirmasi Password Baru</string>
    <string name="change_password">Ganti Password</string>
    <string name="new_password">Password Baru</string>
    <string name="old_password">Password Lama</string>
    <string name="confirm_new_password">Konfirmasi Password baru</string>
    <string name="welcome_home">Selamat datang,</string>
    <string name="search">Search...</string>
    <string name="logout">Keluar</string>
    <string name="user_profile">Profile</string>
    <string name="error">Gagal</string>
    <string name="success">Berhasil</string>
    <string name="please_wait">Harap tunggu</string>
    <string name="masuk_akun_hayseed">Masuk akun HaySeed</string>
    <string name="senang_bertemu_denganmu">Senang bertemu denganmu</string>
    <string name="lupa_password">Lupa password</string>
    <string name="masuk">Masuk</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_eget_id">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget id</string>
    <string name="hayseed">Hayseed</string>
    <string name="bercocok_tanam_kini_lebih_mudah_di_rumah">Bercocok tanam kini lebih mudah di rumah!</string>
    <string name="tidak_perlu_khawatir_kehabisan_stok_lagi_kini_kamu_dapat_menanamnya_sendiri">Tidak perlu khawatir kehabisan stok lagi, kini kamu dapat menanamnya sendiri!</string>
    <string name="lanjut">Lanjut</string>
    <string name="metode_penanaman_bibit">Mari tingkatkan pengalaman bercocok tanam</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_hayseed">Daftar HaySeed</string>
    <string name="nama_pertama">Nama</string>
    <string name="please_field_your_name">Silahkan isi nama terlebih dahulu</string>
    <string name="please_field_your_confirm_password">Silahkan masukan kata sandi terlebih dahulu</string>
    <string name="please_field_your_password_more_than_8">Silahkan masukan kata sandi lebih dari 8 huruf</string>
    <string name="please_field_your_confirm_password_more_than_8">Silahkan masukan kata sandi lebih dari 8 huruf</string>
    <string name="your_password_didnt_match">Kata sandi tidak cocok</string>
    <string name="please_field_your_old_password">Silahkan masukan kata sandi lama</string>
    <string name="please_input_your_old_password_more_than_8">Silakan masukkan kata sandi lama Anda lebih dari 8 huruf</string>
    <string name="please_field_your_new_password">Silahkan masukan kata sandi baru</string>
    <string name="please_input_your_new_password_more_than_8">Silahkan masukan kata sandi lebih dari 8 huruf</string>
    <string name="please_field_your_confirm_new_password">Silahkan masukan konfirmasi kata sandi baru anda</string>
    <string name="please_input_your_confirm_new_password_more_than_8">Silakan masukkan konfirmasi kata sandi baru anda lebih dari 8</string>
    <string name="success_change_pass">Selamat, kata sandi telah diubah</string>
    <string name="success_register">Selamat, akun anda telah terdaftar</string>
    <string name="success_forgot_pass">Link reset password sudah terkirim ke email Anda, silahkan dicek</string>
    <string name="please_field_your_email">Silahkan isikan email anda</string>
    <string name="please_use_valid_email">Harap gunakan email yang valid</string>
    <string name="please_field_your_password">Silakan masukkan kata sandi anda</string>
</resources>