<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/swipe_user"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".presentation.user.UserActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:elevation="0dp"
      android:background="@android:color/transparent">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageButton
          android:id="@+id/btn_close_user"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@android:color/transparent"
          android:src="@drawable/kembali"/>

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/user_profile"
          android:textColor="@color/black"
          android:fontFamily="sans-serif-medium"
          android:layout_marginStart="16dp"/>

      </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guideline_start"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guideline_end"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          app:layout_constraintGuide_end="16dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/iv_avatar_user"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:src="@android:color/darker_gray"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="@id/guideline_start"
          app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

        <TextView
          android:id="@+id/tv_name_user"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text=""
          tools:text="Muhammad Ilham Hafizha"
          android:textAlignment="center"
          android:textSize="24sp"
          android:textColor="@color/black"
          android:textStyle="bold"
          android:layout_marginTop="40dp"
          app:layout_constraintTop_toBottomOf="@id/iv_avatar_user"
          app:layout_constraintStart_toStartOf="@id/guideline_start"
          app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

        <TextView
          android:id="@+id/tv_email_user"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text=""
          tools:text="ilham@gmail.com"
          android:textAlignment="center"
          android:textSize="16sp"
          app:layout_constraintTop_toBottomOf="@id/tv_name_user"
          app:layout_constraintStart_toStartOf="@id/guideline_start"
          app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

        <Button
          android:id="@+id/btn_logout_user"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/logout"
          android:textColor="@color/white"
          android:background="@drawable/color_btn_login"
          android:layout_marginBottom="16dp"
          android:layout_marginStart="4dp"
          android:layout_marginEnd="4dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="@id/guideline_start"
          app:layout_constraintEnd_toEndOf="@id/guideline_end"/>


        <Button
            android:id="@+id/btn_change_password_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/color_btn_login"
            android:text="@string/change_password"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_logout_user"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_start" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

  </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>